--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
                 Belépés
             </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
+                Regisztráció
+            </button>
            
         </nav>
 
@@ -69,7 +72,7 @@
 
         <p class="bg-success p-5 text-white rounded shadow">Minden is Jóárasítva, A Legolcsóbban! Ha Meglátta Hadd
             Vigye!
-            Használt, Alig Használt, És Új Termékek, Másodkézből! ITT A BOOHERA MATRIX</p>
+            Használt, Alig Használt, És Új Termékek, Másodkézből! ITT A BOOHERA MATRIX!</p>
         <p class="border border-primary rounded">Boohera Matrix A Kincsek WebTárháza!
             Minden is Jóárasítva, A Legolcsóbban! Ha Meglátta Hadd Vigye!
             Használt, Alig Használt, És Új Termékek, Másodkézből!</p>
@@ -107,7 +110,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary">Belépés</button>
         </div>
       </div>
     </div>
