két kép és container

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container m-5">
+    <div class=" bg-info m-1">
         <h1>Buhera Mátrix</h1>
 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -81,14 +81,18 @@
             Minden is Jóárasítva, A Legolcsóbban! Ha Meglátta Hadd Vigye! Használt, Alig Használt, És Új Termékek,
             Másodkézből! ITT A BUHERA MÁTRIX!
         </p>
-        <p class="border border-primary rounded p-3 ">
+        <p class="mt-5 mb-5 border border-primary rounded p-1">
             Buhera Mátrix A Kincsek WebTárháza! Minden is Jóárasítva, A Legolcsóbban! Ha Meglátta Hadd Vigye! Használt,
             Alig Használt, És Új Termékek, Másodkézből!
         </p>
-        <p class="border border-3 p-3 rounded-circle w-100 d-inline">
-            Rózsaszín Flash
+        <p class="border border-5 p-3 bg-danger bg-gradient text-white rounded-circle w-100 d-inline">
+            Rózsaszín Flash.
         </p>
+       <div class="container">
+
+       </div>
     </div>
+    
 </body>
 
 </html>
